# agent_project

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.yaml  debug_health.py  pyproject.toml  test_azure_integration.py  test_chat_completion.py  type_check_test.py
.github/: copilot-instructions.md
.github/chatmodes/: Azure_function_codegen_and_deployment.chatmode.md
data/cv/: cv1.md
data/jobs/: job1.md  job2.md  job3.md
docs/: 00-project-overview.md  01-implementation-plan.md  README.md  task-1.1-project-setup.md  task-1.2-azure-integration.md  task-1.3-fastapi-application.md  task-1.4-cv-gathering.md  task-2.1-job-board-integration.md  task-3.1-langchain-integration.md  task-index.md
src/job_agent/: __init__.py  app.py  main.py
src/job_agent/api/: __init__.py  deps.py  middleware.py
src/job_agent/api/v1/: __init__.py  applications.py  github.py  health.py  jobs.py
src/job_agent/core/: config.py  health.py  logging.py
src/job_agent/models/: __init__.py  api.py  cv.py  github.py  health.py  job.py  matching.py
src/job_agent/services/: github_service.py  job_service.py  openai_service.py
src/job_agent/utils/: azure_utils.py
tests/: __init__.py  conftest.py
tests/integration/: test_azure_openai.py
tests/unit/: test_config.py  test_cv_models.py  test_github_service.py  test_job_service.py  test_main.py  test_matching_models.py  test_openai_service.py  test_setup.py
tests/unit/api/: test_github.py  test_health.py  test_jobs.py
